# unicn

app/: package-lock.json
app/unicn/: .gitignore  App.js  app.json  constants.js  package-lock.json  package.json
app/unicn/components/: auth_header.js  line.js
app/unicn/core/: app_navigator.js
app/unicn/screens/: chat.js  dashboard.js  (+2 more)
server/: .dockerignore  .env.dev  .gitignore  Dockerfile  main.py  migrate.sh  pyproject.toml  run.sh  usgi.py
server/alembic/: env.py
server/alembic/versions/: 3b6623c79786_users_table.py  52a57e95531a_add_partner_ownership.py  809ce1c8e6e5_add_default_admin.py  8dcbdeb4c696_add_reset_code_on_user.py  af7f0d4890ee_enhance_user_model.py  b2eff0dee2c0_add_auth_model.py  d8ef5595454e_add_active_fields_on_user.py  f58943f5a6d5_add_partner_and_memberships.py
server/app/: main.py  pre_start.py  pyproject.toml
server/app/app/: api_v1.py
server/app/auth/: api.py  constants.py  dao.py  models.py  serializer.py
server/app/core/: config.py  deps.py  security.py  settings.py
server/app/db/: base.py  base_class.py  custom_search.py  dao.py  filters.py  mixins.py  pagination.py  serializer.py  session.py  sql_search_expressions.sql  utils.py
server/app/exceptions/: custom.py
server/app/partners/: api.py  constants.py  dao.py  models.py  serializer.py
server/app/users/: api.py  dao.py  filters.py  models.py  serializer.py
server/app/utils/: email.py  fns.py
web/: .env.local.example  .gitignore  README.md  next.config.js  package.json
web/styles/: global.ts
web/unicn/: .gitignore  package-lock.json  package.json
(+22 files in other folders)
