[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Muinde"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
tenacity = "^8.0.1"
python-dotenv = "^0.20.0"
autoflake = "^1.4"
black = "^22.6.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
